# imgproc_coursework

./: .gitignore  CMakeLists.txt  main_app.cpp  main_md.cpp
ads/markdown/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt
